--- a/Jeni-Mimi/video.html
+++ b/Jeni-Mimi/video.html
@@ -11,20 +11,16 @@
         <link rel="stylesheet" href="css/base.css">
     </head>
     <body>
-      <header>
-        <h1>Our Assignment</h1>
-        <nav>
+      <nav>
           <ul>
-            <li><a href="video.html">Video</a></li>
-            <li><a href="audio.html">Audio</a>
-            </li>
-            <li><a href="form.html">Form</a></li>
+            <li class="nav-li"><a href="index.html">Home</a></li>
+            <li class="nav-li"><a href="video.html">Video</a></li>
+            <li class="nav-li"><a href="form.html">Form</a></li>
           </ul>
-        </nav>
-      </header>
+      </nav>
       <main>
+
+
       </main>
-
-
     </body>
 </html>
