--- a/Jeni-Mimi/form.html
+++ b/Jeni-Mimi/form.html
@@ -11,17 +11,13 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-        <h1>Our Assignment</h1>
-        <nav>
-          <ul>
-            <li class="nav-li"><a href="video.html">Video</a></li>
-            <li class="nav-li"><a href="audio.html">Audio</a>
-            </li>
-            <li class="nav-li"><a href="form.html">Form</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <ul>
+          <li class="nav-li"><a href="index.html">Home</a></li>
+          <li class="nav-li"><a href="video.html">Video</a></li>
+          <li class="nav-li"><a href="form.html">Form</a></li>
+        </ul>
+      </nav>
     <main>
       <article>
         <h1>KEEP IN TOUCH</h1>
