--- a/Jeni-Mimi/video.html
+++ b/Jeni-Mimi/video.html
@@ -21,8 +21,8 @@
     </header>
     <main>
       <video controls="">
-      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.webm" type="video/webm">
-      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.mp4" type="video/mp4">
+      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.webm#t=10,20" type="video/webm">
+      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.mp4#t=10,20" type="video/mp4">
       <p>This browser does not support the video element.</p>
     </main>
     </video>
