--- a/Jeni-Mimi/video.html
+++ b/Jeni-Mimi/video.html
@@ -20,11 +20,11 @@
       </nav>
     </header>
     <main>
-      <video controls="">
-      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.webm#t=10,20" type="video/webm">
-      <source src="https://developers.google.com/web/fundamentals/documentation/introduction-to-media/video/video/chrome.mp4#t=10,20" type="video/mp4">
-      <p>This browser does not support the video element.</p>
+      <video poster="img/clouds.png" controls="">
+        <source src="https://clips.vorwaerts-gmbh.de/big_buck_bunny.webm#t=0,15" type="video/webm">
+        <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4#t=0,15" type="video/mp4">
+        <p>This browser does not support the video element.</p>
+      </video>
     </main>
-    </video>
   </body>
 </html>
